--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (Server "Server.cpp" "Server.h")
+add_executable (Server "Main.cpp" )
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Server PROPERTY CXX_STANDARD 17)
