Add Core module with precompiled headers support
Updated CMake configuration to include a new "Core" module and defined a static library. Set C++ standard to C++17 and enabled precompiled headers. Created `CorePch.h` for common headers and implemented a `Print` function in `Global.cpp`. Updated `Main.cpp` to utilize the new structure and modified `Pch.h` to include `CorePch.h`.

--- a/src/WorldServer/CMakeLists.txt
+++ b/src/WorldServer/CMakeLists.txt
@@ -10,4 +10,12 @@ target_precompile_headers(WorldServer PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/Pch.h"
 )
 
-# TODO: Add tests and install targets if needed.
+# Add include directories
+target_include_directories(WorldServer PRIVATE
+  "${CMAKE_CURRENT_SOURCE_DIR}"
+)
+
+# Link libraries
+target_link_libraries(WorldServer PRIVATE
+  Core
+)
