Refactor logging with AppContext and remove Global files
Updated CMakeLists.txt to include Context.cpp and Context.h in the Core library, removing Global.cpp and Global.h. Introduced AppContext class with methods for initializing and cleaning up an asynchronous logger using spdlog. Modified CorePch.h to remove Global dependencies and added Windows-specific headers. Replaced logging calls in Main.cpp to utilize the new AppContext logging mechanism.

--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -3,8 +3,8 @@ find_package(spdlog CONFIG REQUIRED)
 
 # Add source to this static library.
 add_library(Core STATIC
-    "Global.cpp"
-    "Global.h"
+    "Context.cpp"
+    "Context.h"
 )
 
 # Set C++ standard
