Add Network module with session management
- Introduced a new "Network" module in CMakeLists.txt.
- Updated CorePch.h for Windows compatibility.
- Created a static library "Network" with Session management.
- Enabled C++17 and precompiled headers for the Network module.
- Defined the Session class with necessary constructors and type aliases.
- Updated WorldServer to link against the new Network library.
- Modified Main.cpp to utilize the Session class.
- Added "asio" as a dependency in vcpkg.json.

--- a/src/WorldServer/CMakeLists.txt
+++ b/src/WorldServer/CMakeLists.txt
@@ -17,5 +17,5 @@ target_include_directories(WorldServer PRIVATE
 
 # Link libraries
 target_link_libraries(WorldServer PRIVATE
-  Core
+  Core Network
 )
