Update project configuration and source files
- Adjusted `.editorconfig` for indentation and line length.
- Modified `CMakeLists.txt` to include new source files in `Core` library.
- Confirmed C++ standard for `Core` target is set to C++17.
- Updated include directives in `App.cpp`, `CorePch.h`, and `Main.cpp`.
- Ensured proper linking of `Core` library with `Network` target.

--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -3,8 +3,8 @@ find_package(spdlog CONFIG REQUIRED)
 
 # Add source to this static library.
 add_library(Core STATIC
-    "Context.cpp"
-    "Context.h"
+    "Context/App.cpp"
+    "Context/App.h"
 )
 
 # Set C++ standard
