Add session management and server functionality
Updated CMakeLists.txt to include new source files for the Network library and WorldServer executable. Introduced SessionEventType and SessionEvent in Event.h. Added Queue class for thread-safe event handling. Created AcceptService and ConnectService for asynchronous session management. Enhanced Session class with data handling methods and fixed spelling errors. Modified Main.cpp to instantiate WorldServer, and implemented WorldServer class in Server files to manage server lifecycle and session events.

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -1,8 +1,9 @@
 # Add source to this static library.
 add_library(Network STATIC
-    "Session.cpp"
-    "Session.h"
-)
+    "Session.h" "Session.cpp"
+    "Service.h" "Service.cpp"
+    "Queue.h" "Queue.cpp"
+    "Event.h" )
 
 # Set C++ standard
 set_property(TARGET Network PROPERTY CXX_STANDARD 17)
