--- a/src/WorldServer/CMakeLists.txt
+++ b/src/WorldServer/CMakeLists.txt
@@ -1,5 +1,8 @@
 # Add source to this project's executable.
-add_executable (WorldServer "Main.cpp")
+add_executable (WorldServer
+    "Main.cpp"
+    "Server.h" "Server.cpp"
+)
 
 # Set C++ standard
 set_property(TARGET WorldServer PROPERTY CXX_STANDARD 17)
