Refactor Core and Network library structure
- Updated source files in CMakeLists.txt for Core library: removed Context/App.cpp and Context/App.h, added Context.h and Context.cpp.
- Changed header inclusion in Context.cpp and Main.cpp to use Context.h.
- Renamed static instance variable in AppContext class for clarity.
- Adjusted source files in CMakeLists.txt for Network library, correcting the inclusion of Event.h.

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -3,7 +3,8 @@ add_library(Network STATIC
     "Session.h" "Session.cpp"
     "Service.h" "Service.cpp"
     "Queue.h" "Queue.cpp"
-    "Event.h" )
+    "Event.h"
+)
 
 # Set C++ standard
 set_property(TARGET Network PROPERTY CXX_STANDARD 17)
