Implement dynamic ReceiveBuffer for session data handling
Introduces a new `ReceiveBuffer` class in `Buffer.h` and `Buffer.cpp` to manage data reception with dynamic sizing. Updates `Client.cpp` and `Server.cpp` to utilize the new buffer, enhancing logging and data management. Modifies `Session.cpp` and `Session.h` to replace static array-based buffers with the new implementation. Updates `CMakeLists.txt` to include the new buffer files in the build process.

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(Network STATIC
     "Queue.h" "Queue.cpp"
     "Event.h"
     "Thread.h" "Thread.cpp"
+    "Buffer.h" "Buffer.cpp"
 )
 
 # Set C++ standard
