Add Packet header and implementation to Network library
Updated CMakeLists.txt to include Packet.h and Packet.cpp.
Introduced a new namespace `net` in both files. Added
`#pragma once` to Packet.h and defined type aliases for
packet identification and size. Created a packed
`PacketHeader` struct to manage packet metadata.

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(Network STATIC
     "Event.h"
     "Thread.h" "Thread.cpp"
     "Buffer.h" "Buffer.cpp"
+    "Packet.h" "Packet.cpp"
 )
 
 # Set C++ standard
