protobuf를 이용한 직렬화 통신 도입

--- a/src/DummyClient/CMakeLists.txt
+++ b/src/DummyClient/CMakeLists.txt
@@ -15,5 +15,5 @@ target_precompile_headers(DummyClient PRIVATE
 
 # Link libraries
 target_link_libraries(DummyClient PRIVATE
-    Core Network
+    Core Network Protocol
 )
