--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 # CMakeList.txt : Top-level CMake project file, do global configuration
 # and include sub-projects here.
-#
 cmake_minimum_required (VERSION 3.16)
 
 # Enable Hot Reload for MSVC compilers if supported.
@@ -10,6 +9,11 @@ if (POLICY CMP0141)
 endif()
 
 project ("AsioGameServer")
+
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Include sub-projects.
 add_subdirectory ("src")
