proto::MessageSerializer를 이용해 메시지 생성 및 직렬화하여 전송 가능

--- a/src/Protocol/CMakeLists.txt
+++ b/src/Protocol/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(Protocol STATIC
     "Queue.h" "Queue.cpp"
     "Factory.h"
     "Dispatcher.h" "Dispatcher.cpp"
+    "Serializer.h"
 )
 
 # Enable precompiled headers using CMake's built-in support
