--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Include sub-projects.
-add_subdirectory ("Core")
-add_subdirectory ("Network")
-add_subdirectory ("Protocol")
-add_subdirectory ("WorldServer")
-add_subdirectory ("DummyClient")
+add_subdirectory("Core")
+add_subdirectory("Network")
+add_subdirectory("Protocol")
+add_subdirectory("WorldServer")
+add_subdirectory("DummyClient")
+add_subdirectory("GameClient")
