채팅창 코드 분리

--- a/src/GameClient/CMakeLists.txt
+++ b/src/GameClient/CMakeLists.txt
@@ -2,6 +2,9 @@
 add_executable (GameClient
     "Main.cpp"
     "GameClient.h" "GameClient.cpp"
+    "FontManager.h" "FontManager.cpp"
+    "KoreanInputManager.h" "KoreanInputManager.cpp"
+    "ChatWindow.h" "ChatWindow.cpp"
 )
 
 # Find packages in correct order
