WorldServer의 채팅 관련 로직 ChatRoom 클래스로 분리

--- a/src/WorldServer/CMakeLists.txt
+++ b/src/WorldServer/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable (WorldServer
     "Main.cpp"
     "Server.h" "Server.cpp"
+    "ChatRoom.h" "ChatRoom.cpp"
 )
 
 # Enable precompiled headers using CMake's built-in support
